--- a/pesan.html
+++ b/pesan.html
@@ -101,7 +101,7 @@
   </nav>
 
   <div class="container">
-    <h1>Pesan Buat Kamu 💓</h1>
+    <h1>Pesan Buat Kamu 💌</h1>
     <p>
       Aku gak tau kamu masih suka baca pesan kayak gini atau enggak.
       Tapi kalau kamu nemu ini, anggap aja aku lagi nitipin sedikit rasa khawatir.
