--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <p>Tiktok:
       <a href="https://www.tiktok.com/@lyssaasaa?_t=ZS-8yFm9OMqh1N&_r=1" target="_blank">@lyssaasaa</a>
     </p>
-    <p>Tiktok:
+    <p>Instagram:
       <a href="https://www.instagram.com/lyssaasa?igsh=b3hweGFlZXcyM294" target="_blank">@lyssaasa</a>
     </p>
   </section>
